final - adjusted obstacle size to new speed to avoid clipping through obstacles at 15 FPS

--- a/css/final/main.css
+++ b/css/final/main.css
@@ -519,7 +519,7 @@ button:target {
 /* Wall */
 .wall {
     position: absolute;
-    width: 100px;
+    width: 250px;
     height: 700px;
     border: 3px solid #000000;
     top: -10px;
@@ -556,8 +556,8 @@ button:target {
     position: absolute;
     background-image: linear-gradient(to left, #ff0000 25%,#4f0000 50%, #ff0000 75%);
     box-shadow: 0px 0px 30px red;
-    width: 50px;
-    left: 25px;
+    width: 59px;
+    left: 23px;
     top: 100px;
     transform-origin: top;
 }
